--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.idea/
+dataRCS/
+weight_of_model/
+结构.pptx
+ceshi.py
+ceshi.py
+model/pretrain_wight/
