Establish yjy  branch

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-ipython==7.31.1
-matplotlib==3.5.3
-numpy==1.21.6
-opencv_python==4.7.0.72
-Pillow==9.5.0
-scipy==1.7.3
-torch==1.13.1+cu117
-torchvision==0.14.1+cu117
+torch
+timm==0.3.2
+scikit-image
+ptflops
+easydict
+PyYAML
+pillow
+torchvision
+opencv-python
+ipython
+scipy
