--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-torch
-timm==0.3.2
-scikit-image
-ptflops
-easydict
-PyYAML
-pillow
-torchvision
-opencv-python
-ipython
-scipy
+ipython==7.31.1
+matplotlib==3.5.3
+numpy==1.21.6
+Pillow==9.5.0
+scipy==1.7.3
+timm==0.9.2
+torch==1.13.1+cu117
+torchvision==0.14.1+cu117
