--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-ipython==7.31.1
-matplotlib==3.5.3
-numpy==1.21.6
+easydict==1.10
+ipython==8.13.2
+matplotlib==3.7.1
+numpy==1.24.3
+opencv_python==4.7.0.72
+Pillow==9.3.0
 Pillow==9.5.0
-scipy==1.7.3
-timm==0.9.2
-torch==1.13.1+cu117
-torchvision==0.14.1+cu117
+PyYAML==6.0
+PyYAML==6.0
+scipy==1.10.1
+skimage==0.0
+timm==0.3.2
+torch==2.1.0.dev20230519+cu118
+torchvision==0.16.0.dev20230519+cu118
